update detail font

--- a/index.html
+++ b/index.html
@@ -27,9 +27,12 @@
       >
         <!-- title -->
         <div
-          class="mt-4 flex justify-center items-center w-full h-12 font-TH-prompt text-2xl text-slate-800 font-semibold"
+          class="flex space-x-2 justify-center items-center w-full h-12 mt-4"
         >
-          สถิติครัวเรือนเปราะบางจากระบบ TPMAP
+          <p class="text-slate-800 font-TH-prompt text-2xl font-semibold">
+            สถิติครัวเรือนเปราะบาง จากระบบ
+          </p>
+          <img src="/TPMAP-logo.png" class="h-5" />
         </div>
 
         <!-- select data -->
@@ -119,7 +122,7 @@
                 จำนวนคนเปราะบางทั้งหมด
               </p>
               <div
-                class="w-full h-4/6 flex flex-col justify-center items-center font-light"
+                class="w-full h-3/6 md:h-4/6 flex flex-col justify-center items-center font-light"
               >
                 <p class="text-sm md:text-base">
                   <span class="font-semibold md:text-lg">5,305,800</span>
@@ -210,10 +213,15 @@
           <div
             class="w-full h-full space-y-2 font-TH-prompt font-light border border-[#6672a9]/50 p-4 rounded-xl shadow-md"
           >
-            <p class="w-full text-lg font-semibold text-center mb-4">
-              เกณฑ์ครัวเรือนเปราะบาง และนิยามภาระ โดย
-              <span class="text-[#6672a9]">กรมการพัฒนาชุมชน</span>
-            </p>
+            <div class="w-full mb-6">
+              <p class="w-full text-lg font-semibold text-center">
+                เกณฑ์ครัวเรือนเปราะบาง และนิยามภาระ
+              </p>
+              <p class="w-full text-base font-normal text-center">
+                โดย <span class="text-[#6672a9]">กรมการพัฒนาชุมชน</span>
+              </p>
+            </div>
+
             <p class="underline">เกณฑ์การคัดเลือกครัวเรือนเปราะบาง</p>
             <ol class="list-decimal pl-6 text-sm">
               <li>
