--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/TPMAP-star-logo.ico" />
     <link rel="stylesheet" href="style.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>TPMAP Fragile</title>
@@ -16,23 +16,25 @@
       <header
         class="sticky top-0 z-10 flex flex-row justify-start items-center space-x-2 divide-x h-14 w-full p-4 bg-[#f9f9f9] shadow-md"
       >
-        <img src="/TPMAP-logo.png" class="h-4" />
+        <img src="/TPMAP-logo.png" class="h-4 md:h-5" />
 
-        <p class="text-xs text-[#6672a9] px-2">
+        <p class="hidden sm:block sm:text-xs md:text-sm text-[#6672a9] px-2">
           Thai People Map and Analytics Platform
         </p>
       </header>
       <main
-        class="relative flex flex-grow flex-col justify-center items-center h-full w-full space-y-8 px-4 py-2 bg-white"
+        class="relative flex flex-grow flex-col justify-center items-center h-full w-full space-y-6 px-4 py-2 bg-white"
       >
         <!-- title -->
         <div
           class="flex space-x-2 justify-center items-center w-full h-12 mt-4"
         >
-          <p class="text-slate-800 font-TH-prompt text-2xl font-semibold">
+          <p
+            class="text-slate-800 font-TH-prompt text-xl md:text-2xl font-semibold"
+          >
             สถิติครัวเรือนเปราะบาง จากระบบ
           </p>
-          <img src="/TPMAP-logo.png" class="h-5" />
+          <img src="/TPMAP-logo.png" class="h-4 md:h-5" />
         </div>
 
         <!-- select data -->
@@ -92,7 +94,7 @@
         >
           <!-- map -->
           <div
-            class="flex flex-col justify-center items-center h-4/6 md:h-full w-full bg-white rounded-lg shadow-md px-2 py-4 border-t border-[#6672a9]/10 space-y-4"
+            class="flex flex-col justify-center items-center h-5/6 md:h-full w-full bg-white rounded-lg shadow-md px-2 py-4 border-t border-[#6672a9]/10 space-y-4"
           >
             <div
               class="h-8 grid grid-cols-2 justify-items-center items-center w-5/6 border text-xs md:text-sm font-TH-prompt rounded-full divide-x-1"
@@ -108,16 +110,22 @@
                 แสดงสีตามจำนวนครัวเรือน
               </div>
             </div>
-            <div class="flex-grow bg-slate-100 w-full">map</div>
+            <div
+              class="flex-grow bg-slate-100 w-full h-full flex items-center justify-center text-7xl"
+            >
+              MAP
+            </div>
           </div>
 
           <!-- description -->
           <div
-            class="font-TH-prompt gap-4 grid grid-cols-3 grid-rows-2 md:grid-rows-6 md:grid-cols-1 h-2/6 md:h-full w-full min-w-3/6 md:w-3/6"
+            class="relative font-TH-prompt flex flex-row md:flex-col space-x-4 space-y-0 md:space-y-4 md:space-x-0 justify-start md:justify-center items-center p-2 h-1/6 md:h-full w-full min-w-sm md:flex-none md:w-2/6 overflow-auto md:overflow-none"
           >
-            <div class="h-full w-full bg-white rounded-lg shadow-md">
+            <div
+              class="text-white flex-none md:flex-auto h-full w-3/6 md:w-full bg-[#6672a9]/90 rounded-lg shadow-md"
+            >
               <p
-                class="p-2 text-white text-center bg-[#6672a9] h-fit lg:h-2/6 rounded-lg rounded-b-none text-sm md:text-base"
+                class="border-b p-2 text-center h-fit rounded-lg rounded-b-none text-sm md:text-base"
               >
                 จำนวนคนเปราะบางทั้งหมด
               </p>
@@ -134,9 +142,11 @@
                 </p>
               </div>
             </div>
-            <div class="h-full w-full bg-white rounded-lg shadow-md">
+            <div
+              class="flex-none md:flex-auto h-full w-2/6 md:w-full bg-white rounded-lg shadow-md"
+            >
               <p
-                class="p-2 text-white text-center bg-[#6672a9] h-fit lg:h-2/6 rounded-lg rounded-b-none text-sm md:text-base"
+                class="p-2 text-white bg-[#6672a9] text-center h-fit lg:h-2/6 rounded-lg rounded-b-none text-sm md:text-base"
               >
                 เด็กยากจน (ศธ)
               </p>
@@ -148,9 +158,11 @@
                 </p>
               </div>
             </div>
-            <div class="h-full w-full bg-white rounded-lg shadow-md">
+            <div
+              class="flex-none md:flex-auto h-full w-2/6 md:w-full bg-white rounded-lg shadow-md"
+            >
               <p
-                class="p-2 text-white text-center bg-[#6672a9] h-fit lg:h-2/6 rounded-lg rounded-b-none text-sm md:text-base"
+                class="p-2 text-white bg-[#6672a9] text-center h-fit lg:h-2/6 rounded-lg rounded-b-none text-sm md:text-base"
               >
                 ผู้สูงอายุที่ไม่ได้รับเบี้ยฯ
               </p>
@@ -162,9 +174,11 @@
                 </p>
               </div>
             </div>
-            <div class="h-full w-full bg-white rounded-lg shadow-md">
+            <div
+              class="flex-none md:flex-auto h-full w-2/6 md:w-full bg-white rounded-lg shadow-md"
+            >
               <p
-                class="p-2 text-white text-center bg-[#6672a9] h-fit lg:h-2/6 rounded-lg rounded-b-none text-sm md:text-base"
+                class="p-2 text-white bg-[#6672a9] text-center h-fit lg:h-2/6 rounded-lg rounded-b-none text-sm md:text-base"
               >
                 ผู้พิการที่ไม่ได้รับเบี้ยฯ
               </p>
@@ -176,9 +190,11 @@
                 </p>
               </div>
             </div>
-            <div class="h-full w-full bg-white rounded-lg shadow-md">
+            <div
+              class="flex-none md:flex-auto h-full w-2/6 md:w-full bg-white rounded-lg shadow-md"
+            >
               <p
-                class="p-2 text-white text-center bg-[#6672a9] h-fit lg:h-2/6 rounded-lg rounded-b-none text-sm md:text-base"
+                class="p-2 text-white bg-[#6672a9] text-center h-fit lg:h-2/6 rounded-lg rounded-b-none text-sm md:text-base"
               >
                 ผู้ป่วยเรื้อรังที่ช่วยเหลือตัวเองไม่ได้
               </p>
@@ -190,9 +206,11 @@
                 </p>
               </div>
             </div>
-            <div class="h-full w-full bg-white rounded-lg shadow-md">
+            <div
+              class="flex-none md:flex-auto h-full w-2/6 md:w-full bg-white rounded-lg shadow-md"
+            >
               <p
-                class="p-2 text-white text-center bg-[#6672a9] h-fit lg:h-2/6 rounded-lg rounded-b-none text-sm md:text-base"
+                class="p-2 text-white bg-[#6672a9] text-center h-fit lg:h-2/6 rounded-lg rounded-b-none text-sm md:text-base"
               >
                 ครัวเรือนที่บ้านไม่มั่นคง
               </p>
@@ -211,7 +229,7 @@
         <section class="max-w-6xl mx-auto flex flex-col space-y-8 w-full">
           <!-- index -->
           <div
-            class="w-full h-full space-y-2 font-TH-prompt font-light border border-[#6672a9]/50 p-4 rounded-xl shadow-md"
+            class="w-full h-full space-y-2 font-TH-prompt font-light bg-slate-50 p-4 rounded-xl shadow-lg border border-[#6672a9]/5"
           >
             <div class="w-full mb-6">
               <p class="w-full text-lg font-semibold text-center">
@@ -223,7 +241,7 @@
             </div>
 
             <p class="underline">เกณฑ์การคัดเลือกครัวเรือนเปราะบาง</p>
-            <ol class="list-decimal pl-6 text-sm">
+            <ol class="list-decimal pl-8 text-sm">
               <li>
                 เป็นครัวเรือนที่อาชีพเกษตรกรจากข้อมูล จปฐ.
                 และไม่ได้ลงทะเบียนเกษตรกร (หัวหน้าครัวเรือนแจ้งว่าเป็นเกษตรกร
@@ -238,7 +256,7 @@
             </ol>
 
             <p class="underline">นิยามภาระในครัวเรือนเปราะบาง</p>
-            <ol class="list-decimal pl-6 text-sm">
+            <ol class="list-decimal pl-8 text-sm">
               <li>
                 ไม่มีความมั่นคงในที่อยู่อาศัย (ตกตัวชี้วัดที่ 8 ตามเกณฑ์ จปฐ)
               </li>
@@ -259,7 +277,7 @@
             class="mb-4 w-full lg:pl-4 h-full space-y-6 font-TH-prompt font-light flex flex-col justify-center items-center"
           >
             <p class="text-lg font-semibold mt-4 text-center w-full">
-              บูรณาการข้อมูลจากฐานข้อมูล:
+              บูรณาการข้อมูลจากฐานข้อมูล
             </p>
             <div class="list-none text-sm space-y-4 sm:hidden">
               <div class="flex flex-row space-x-4 justify-start items-center">
@@ -359,7 +377,7 @@
 
         <!-- small banner -->
         <section
-          class="pt-4 border-t divide-x h-24 flex flex-col lg:flex-row justify-center items-center w-full text-xs space-x-0 space-y-2 lg:space-x-2 lg:space-y-0 font-TH-prompt"
+          class="pt-4 border-t divide-x h-fit md:h-24 flex flex-col lg:flex-row justify-center items-center w-full text-xs space-x-0 space-y-2 lg:space-x-2 lg:space-y-0 font-TH-prompt"
         >
           <p class="text-center">
             * การวิเคราะห์ เป็นเพียงความเห็นในเชิงวิชาการเท่านั้น /
