update hiegth of card 1

--- a/index.html
+++ b/index.html
@@ -125,12 +125,12 @@
               class="text-white flex-none md:flex-auto h-full w-3/6 md:w-full bg-[#6672a9]/90 rounded-lg shadow-md"
             >
               <p
-                class="border-b p-2 text-center h-fit rounded-lg rounded-b-none text-sm md:text-base"
+                class="border-b p-2 text-center h-fit lg:h-2/6 rounded-lg rounded-b-none text-sm md:text-base"
               >
                 จำนวนคนเปราะบางทั้งหมด
               </p>
               <div
-                class="w-full h-3/6 md:h-4/6 flex flex-col justify-center items-center font-light"
+                class="w-full h-4/6 flex flex-col justify-center items-center font-light"
               >
                 <p class="text-sm md:text-base">
                   <span class="font-semibold md:text-lg">5,305,800</span>
