--- a/index.html
+++ b/index.html
@@ -23,15 +23,13 @@
         </p>
       </header>
       <main
-        class="relative flex flex-grow flex-col justify-center items-center h-full w-full space-y-6 px-4 py-2 bg-white"
+        class="font-TH-kanit relative flex flex-grow flex-col justify-center items-center h-full w-full space-y-6 px-4 py-2 bg-white"
       >
         <!-- title -->
         <div
           class="flex space-x-2 justify-center items-center w-full h-12 mt-4"
         >
-          <p
-            class="text-slate-800 font-TH-prompt text-xl md:text-2xl font-semibold"
-          >
+          <p class="text-slate-800 text-xl md:text-2xl font-semibold">
             สถิติครัวเรือนเปราะบาง จากระบบ
           </p>
           <img src="/TPMAP-logo.png" class="h-4 md:h-5" />
@@ -39,7 +37,7 @@
 
         <!-- select data -->
         <div
-          class="font-TH-prompt text-base p-4 gap-4 grid grid-cols-1 md:grid-cols-2 grid-flow-row max-w-6xl mx-auto border border-[#6672a9]/50 w-full rounded-xl shadow-md justify-center items-center"
+          class="text-base p-4 gap-4 grid grid-cols-1 md:grid-cols-2 grid-flow-row max-w-6xl mx-auto border border-[#6672a9]/50 w-full rounded-xl shadow-md justify-center items-center"
         >
           <div class="flex space-x-2 justify-center items-center">
             <p class="flex-none">กรองครัวเรือนเปราะบาง:</p>
@@ -97,7 +95,7 @@
             class="flex flex-col justify-center items-center h-5/6 md:h-full w-full bg-white rounded-lg shadow-md px-2 py-4 border-t border-[#6672a9]/10 space-y-4"
           >
             <div
-              class="h-8 grid grid-cols-2 justify-items-center items-center w-5/6 border text-xs md:text-sm font-TH-prompt rounded-full divide-x-1"
+              class="h-8 grid grid-cols-2 justify-items-center items-center w-5/6 border text-xs md:text-sm rounded-full divide-x-1"
             >
               <div
                 class="bg-slate-100 h-full py-1 text-center w-full justify-center items-center rounded-l-full"
@@ -119,7 +117,7 @@
 
           <!-- description -->
           <div
-            class="relative font-TH-prompt flex flex-row md:flex-col space-x-4 space-y-0 md:space-y-4 md:space-x-0 justify-start md:justify-center items-center p-2 h-1/6 md:h-full w-full min-w-sm md:flex-none md:w-2/6 overflow-auto md:overflow-none"
+            class="relative flex flex-row md:flex-col space-x-4 space-y-0 md:space-y-4 md:space-x-0 justify-start md:justify-center items-center p-2 h-1/6 md:h-full w-full min-w-sm md:flex-none md:w-2/6 overflow-auto md:overflow-none"
           >
             <div
               class="text-white flex-none md:flex-auto h-full w-3/6 md:w-full bg-[#6672a9]/90 rounded-lg shadow-md"
@@ -229,7 +227,7 @@
         <section class="max-w-6xl mx-auto flex flex-col space-y-8 w-full">
           <!-- index -->
           <div
-            class="w-full h-full space-y-2 font-TH-prompt font-light bg-slate-50 p-4 rounded-xl shadow-lg border border-[#6672a9]/5"
+            class="w-full h-full space-y-2 font-light bg-slate-50 p-4 rounded-xl shadow-lg border border-[#6672a9]/5"
           >
             <div class="w-full mb-6">
               <p class="w-full text-lg font-semibold text-center">
@@ -274,7 +272,7 @@
 
           <!-- thank for -->
           <div
-            class="mb-4 w-full lg:pl-4 h-full space-y-6 font-TH-prompt font-light flex flex-col justify-center items-center"
+            class="mb-4 w-full lg:pl-4 h-full space-y-6 font-light flex flex-col justify-center items-center"
           >
             <p class="text-lg font-semibold mt-4 text-center w-full">
               บูรณาการข้อมูลจากฐานข้อมูล
@@ -377,7 +375,7 @@
 
         <!-- small banner -->
         <section
-          class="pt-4 border-t divide-x h-fit md:h-24 flex flex-col lg:flex-row justify-center items-center w-full text-xs space-x-0 space-y-2 lg:space-x-2 lg:space-y-0 font-TH-prompt"
+          class="pt-4 border-t divide-x h-fit md:h-24 flex flex-col lg:flex-row justify-center items-center w-full text-xs space-x-0 space-y-2 lg:space-x-2 lg:space-y-0"
         >
           <p class="text-center">
             * การวิเคราะห์ เป็นเพียงความเห็นในเชิงวิชาการเท่านั้น /
