edit word in card and resize filter label

--- a/index.html
+++ b/index.html
@@ -35,16 +35,16 @@
           <img src="/TPMAP-logo.png" class="h-4 md:h-5" />
         </div>
 
-        <!-- select data -->
+        <!-- filter -->
         <div
           class="text-base p-4 gap-4 grid grid-cols-1 md:grid-cols-2 grid-flow-row max-w-6xl mx-auto border border-[#6672a9]/50 w-full rounded-xl shadow-md justify-center items-center"
         >
           <div class="flex space-x-2 justify-center items-center">
-            <p class="flex-none">กรองครัวเรือนเปราะบาง:</p>
+            <p class="flex-none text-sm md:text-base">กรองครัวเรือนเปราะบาง:</p>
             <div
               class="text-[#6672a9] text-sm flex w-full bg-white border border-[#6672a9]/50 h-8 rounded-lg px-2 items-center"
             >
-              <p class="w-full">ทั้งหมด</p>
+              <p class="w-full text-xs md:text-sm">ทั้งหมด</p>
               <svg
                 xmlns="http://www.w3.org/2000/svg"
                 fill="none"
@@ -63,11 +63,11 @@
           </div>
 
           <div class="flex space-x-2 justify-center items-center">
-            <p class="flex-none">เจาะจง:</p>
+            <p class="flex-none text-sm md:text-base">เจาะจง:</p>
             <div
               class="text-[#6672a9] text-sm flex w-full bg-white border border-[#6672a9]/50 h-8 rounded-lg px-2 items-center"
             >
-              <p class="w-full">ไม่เจาะจง</p>
+              <p class="w-full text-xs md:text-sm">ไม่เจาะจง</p>
               <svg
                 xmlns="http://www.w3.org/2000/svg"
                 fill="none"
@@ -123,9 +123,9 @@
               class="text-white flex-none md:flex-auto h-full w-3/6 md:w-full bg-[#6672a9]/90 rounded-lg shadow-md"
             >
               <p
-                class="border-b p-2 text-center h-fit lg:h-2/6 rounded-lg rounded-b-none text-sm md:text-base"
+                class="border-b py-2 px-4 text-center h-fit lg:h-2/6 rounded-lg rounded-b-none text-sm md:text-base"
               >
-                จำนวนคนเปราะบางทั้งหมด
+                จำนวนคนเปราะบางทั้งประเทศ
               </p>
               <div
                 class="w-full h-4/6 flex flex-col justify-center items-center font-light"
@@ -144,7 +144,7 @@
               class="flex-none md:flex-auto h-full w-2/6 md:w-full bg-white rounded-lg shadow-md"
             >
               <p
-                class="p-2 text-white bg-[#6672a9] text-center h-fit lg:h-2/6 rounded-lg rounded-b-none text-sm md:text-base"
+                class="py-2 px-4 text-white bg-[#6672a9] text-center h-fit lg:h-2/6 rounded-lg rounded-b-none text-sm md:text-base"
               >
                 เด็กยากจน (ศธ)
               </p>
@@ -160,7 +160,7 @@
               class="flex-none md:flex-auto h-full w-2/6 md:w-full bg-white rounded-lg shadow-md"
             >
               <p
-                class="p-2 text-white bg-[#6672a9] text-center h-fit lg:h-2/6 rounded-lg rounded-b-none text-sm md:text-base"
+                class="py-2 px-4 text-white bg-[#6672a9] text-center h-fit lg:h-2/6 rounded-lg rounded-b-none text-sm md:text-base"
               >
                 ผู้สูงอายุที่ไม่ได้รับเบี้ยฯ
               </p>
@@ -176,7 +176,7 @@
               class="flex-none md:flex-auto h-full w-2/6 md:w-full bg-white rounded-lg shadow-md"
             >
               <p
-                class="p-2 text-white bg-[#6672a9] text-center h-fit lg:h-2/6 rounded-lg rounded-b-none text-sm md:text-base"
+                class="py-2 px-4 text-white bg-[#6672a9] text-center h-fit lg:h-2/6 rounded-lg rounded-b-none text-sm md:text-base"
               >
                 ผู้พิการที่ไม่ได้รับเบี้ยฯ
               </p>
@@ -192,7 +192,7 @@
               class="flex-none md:flex-auto h-full w-2/6 md:w-full bg-white rounded-lg shadow-md"
             >
               <p
-                class="p-2 text-white bg-[#6672a9] text-center h-fit lg:h-2/6 rounded-lg rounded-b-none text-sm md:text-base"
+                class="py-2 px-4 text-white bg-[#6672a9] text-center h-fit lg:h-2/6 rounded-lg rounded-b-none text-sm md:text-base"
               >
                 ผู้ป่วยเรื้อรังที่ช่วยเหลือตัวเองไม่ได้
               </p>
@@ -208,7 +208,7 @@
               class="flex-none md:flex-auto h-full w-2/6 md:w-full bg-white rounded-lg shadow-md"
             >
               <p
-                class="p-2 text-white bg-[#6672a9] text-center h-fit lg:h-2/6 rounded-lg rounded-b-none text-sm md:text-base"
+                class="py-2 px-4 text-white bg-[#6672a9] text-center h-fit lg:h-2/6 rounded-lg rounded-b-none text-sm md:text-base"
               >
                 ครัวเรือนที่บ้านไม่มั่นคง
               </p>
